--- a/javascript/01-basi-js/06-array.html
+++ b/javascript/01-basi-js/06-array.html
@@ -11,6 +11,12 @@
 
     <ul id="lista"></ul>
 
+    <p id="subTot"></p>
+
+    <p id="iva"></p>
+
+    <p id="totale"></p>
+
     <script src="js/06-array.js"></script>
 </body>
 </html>
